  [Lineke]
+ Adding atkState class to store a value as a cookie or in the session.
  [Yury, Peter, Dennis]
+ Added rl_try JavaScript function which can try multiple actions on a
  record in the recordlist. Very handy to add an onclick handler on
  recordlist items (e.g. onclick="rl_try('{$listid}', {$row.rownum},
  ['select', 'edit', 'view'], false);"). [Peter]
* Fixed export handling of (extended) search values. [Peter]
* Changed onChange event for radioattrbiute to onClick event. It still uses
  the m_onchangecode just like the other attributes. [Lineke]
* Improved attribute security, attributes can now be shown in 
  edit / read-only state or hidden based on record data. [Peter]
* atkQuery conditions are now always surrounded by braces to make sure
  OR conditions in other conditions can't influence the global atkQuery
  conditions. [Peter]
* Fixed saving Embeded o2m relations using transactional databases.
  Added commit() statemement after saving. [Martin]
* Refactored some functionality from atkSecurityManager to the
  auth_interface class which allows for greater control from within
  authorization classes. [Peter]
* Fixed automatic enable/disable of recordlist checkboxes. [Peter,Martin]
* Record-level allowed check is now also being performed in the
  respective action handlers. [Peter]
* atkNode::redirect now has a parameter to immediately exit after the
  redirect. This can prevent weird side effects because the script would 
  normally continue to run after the redirect. [Peter]
* atkDb::selectDb/countDb don't set distinct on by default. In most
  cases this is not needed. And the cases which do need this can turn it
  on manually using an attribute which does so. [Peter]
* atkTestCase:: clear node repository etc. between each test method
  because test methods may *never* influence each other. [Peter]
* If there is not selection possible for an atkManyToOneAttribute
  show the none label. Even if obligatory. [Peter]