@@ -323,6 +323,9 @@ Changed in ATK 5.7
   record in the recordlist. Very handy to add an onclick handler on
   recordlist items (e.g. onclick="rl_try('{$listid}', {$row.rownum},
   ['select', 'edit', 'view'], false);"). [Peter]
+* Fixed calendar-runner. Two different types of date field (one where you input
+  the date and another one where you input the date using the date selection
+  boxes could cause problems because the Calendar object was re-used). [Peter]  
 * Fixed export handling of (extended) search values. [Peter]
 * Changed onChange event for radioattrbiute to onClick event. It still uses
   the m_onchangecode just like the other attributes. [Lineke]
